# skeleton

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac
contrib/: build_rose_linux.sh  build_rose_mac.sh
src/: Makefile.am  Makefile.in  skgen.cc
src/rosex/: a  dataflowtable.cc  dataflowtable.h  defusegraph.cc  defusegraph.h  depgraph.cc  depgraph.h  depgraph.tex  depgraph_p.cc  depgraph_p.h  depgraphbuilder_p.cc  depgraphbuilder_p.h  depgraphnode_p.cc  depgraphnode_p.h  depgraphopt_p.cc  depgraphopt_p.h  loopdepgraph.cc  loopdepgraph.h  loopdepgraph_p.h  rose_config.h  rosex.cc  rosex.h  rosex.pri  rosex_asm.cc  rosex_indent.cc  rosex_p.h  slice_p.cc  slice_p.h  symbolic.cc  symbolic.h  tac.cc  tac.h
src/sk/: sk.pri  skbuilder.cc  skbuilder.h  skbuilder_new.cc  skbuilder_p.h  skbuilder_ref.cc  skbuilder_stat.cc  skbuilder_unparse.cc  skbuilder_vec.cc  skconf.cc  skconf.conf  skconf.h  skdebug.h  skdef.h  skglobal.h  sknode.cc  sknode.h  skprofile.h  skquery.cc  skquery.h  skvariant.h
src/xt/: c++11.h  typeof.h  xdebug.h  xmacros.h  xt.h  xt.pri
