# Makefile.am
# 11/13/2014  jichi

bin_PROGRAMS = skgen
skgen_SOURCES = \
  skgen.cc \
  sk/skbuilder.cc \
  sk/skbuilder_new.cc \
  sk/skbuilder_ref.cc \
  sk/skbuilder_stat.cc \
  sk/skbuilder_unparse.cc \
  sk/skbuilder_vec.cc \
  sk/skconf.cc \
  sk/sknode.cc \
  sk/skquery.cc \
  rosex/dataflowtable.cc \
  rosex/defusegraph.cc \
  rosex/depgraph.cc \
  rosex/depgraph_p.cc \
  rosex/depgraphbuilder_p.cc \
  rosex/depgraphnode_p.cc \
  rosex/depgraphopt_p.cc \
  rosex/loopdepgraph.cc \
  rosex/rosex.cc \
  rosex/rosex_asm.cc \
  rosex/rosex_indent.cc \
  rosex/slice_p.cc \
  rosex/symbolic.cc \
  rosex/tac.cc

